--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
-tittle: Yusuf Hancer Progress Journall
-description: IE 360 Spring 2020 - Bogazici University   
+tittle: Yusuf Hançer & Deniz Aleyna Akbaşaran & Tümay Kır & Musab Emir Baş
+description: Analysis of Simultaneous Arrivals to Multiple Loss Systems
