--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+tittle: Yusuf Hançer & Deniz Aleyna Akbaşaran & Tümay Kır & Musab Emir Baş
+description: Analysis of Simultaneous Arrivals to Multiple Loss Systems
