Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-architect
 tittle: Yusuf Hançer & Deniz Aleyna Akbaşaran & Tümay Kır & Musab Emir Baş
 description: Analysis of Simultaneous Arrivals to Multiple Loss Systems
